--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -74,8 +74,8 @@ jobs:
 
           cat >> .config <<EOF
           CONFIG_TARGET_IMAGES_GZIP=y
-          CONFIG_KERNEL_BUILD_USER="OpenWrt-CI"
-          CONFIG_KERNEL_BUILD_DOMAIN="Azure"
+          CONFIG_KERNEL_BUILD_USER="DD&MM"
+          CONFIG_KERNEL_BUILD_DOMAIN="DMH"
           EOF
 
           #
